--- a/2/src/app/list/list.component.css
+++ b/2/src/app/list/list.component.css
@@ -1,16 +1,41 @@
+*{
+  outline: none;
+}
 .gameBlock{
-  width: 300px;
-  height: 350px;
-  background: azure;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 220px;
+  height: 220px;
+  background: white;
   margin: 10px;
+  border-radius: 20px;
+}
+h2,p{
+  margin: 2px;
 }
 img{
   height: 150px;
   width: 150px;
+  border-radius: 10px;
 }
-.gamePage > div{
+.gamePage{
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   height: 350px;
+}
+.sortButton{
+  display: flex;
+  margin-left: 70px;
+}
+button{
+  margin: 20px;
+  border-radius: 15px;
+  color: #1f071f;
+  font-size: 20px;
+  background: #cad9e3;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
