--- a/2/src/app/adventure-app/adventure-app.component.html
+++ b/2/src/app/adventure-app/adventure-app.component.html
@@ -1,9 +1,12 @@
-<div>
-  <div *ngFor="let App of test" class="gameBlock" >
-    <h2>{{App.app_name}}</h2>
+<div class="sortButton">
+  <h1>Sort by :</h1>
+  <button (click)="change('app_name')">Name</button>
+  <button (click)="change('app_type')">Type</button>
+</div>
+<div class="gamePage">
+  <div *ngFor="let App of infoMas" class="gameBlock" routerLink="/game/{{App.app_short}}">
     <img src="{{App.url}}">
-    <p>Downloads : {{App.downloads}}</p>
-    <p>Size : {{App.file_size}}</p>
-    <button>Download</button>
+    <h2>{{App.app_name}}</h2>
+    <p>✩ {{App.all_rating}}</p>
   </div>
 </div>
