--- a/2/src/app/header/header.component.css
+++ b/2/src/app/header/header.component.css
@@ -1,4 +1,6 @@
-
+*{
+  outline: none;
+}
 header{
   display: flex;
   justify-content: space-between;
@@ -10,7 +12,7 @@ img{
 }
 input[type = "search"]{
   height: 50px;
-  width: 1000px;
+  width: 700px;
   font-size: 30px;
 }
 ul{
