--- a/2/src/app/list/list.component.html
+++ b/2/src/app/list/list.component.html
@@ -1,12 +1,13 @@
-<div class="gamePage">
-  <div >
-<div *ngFor="let App of user" class="gameBlock" >
-  <h2>{{App.app_name}}</h2>
-  <img src="{{App.url}}">
-  <p>Downloads : {{App.downloads}}</p>
-  <p>Size : {{App.file_size}}</p>
-  <button>Download</button>
+<div class="sortButton">
+  <h1>Sort by :</h1>
+  <button (click)="change('app_name')">Name</button>
+  <button (click)="change('app_type')">Type</button>
 </div>
-  </div>
+<div class="gamePage">
+<div *ngFor="let App of user" class="gameBlock" routerLink="game/{{App.app_short | lowercase }}">
+  <img src="{{App.url}}">
+  <h2>{{App.app_name}}</h2>
+  <p>✩ {{App.all_rating}}</p>
+</div>
 </div>
 
