--- a/2/src/styles.css
+++ b/2/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background: url("./assets/background_opcion2.jpg");
+
+}
+
+.root{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+*{
+  outline: none;
+}
+
