--- a/2/src/app/header/header.component.html
+++ b/2/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <header>
   <img src="https://www.ixbt.com/short/images/2017/Sep/google_play_logo_2015-630x247.png"
        routerLink="">
-  <input type="search" [(ngModel)]="searchVar" (click)="changeRouter()" (change)="search()">
+  <input type="search" [(ngModel)]="searchVar" (change)="search()">
 
   <ul class="categories">
-    <li class="Action" routerLink="action">Action</li>
-    <li class="Music" routerLink="music">Music</li>
-    <li class="Strategy" routerLink="strategy">Strategy</li>
-    <li class="Adventure" routerLink="adventure">Adventure</li>
+    <li class="Action" routerLink="type/action">Action</li>
+    <li class="Music" routerLink="type/music">Music</li>
+    <li class="Strategy" routerLink="type/strategy">Strategy</li>
+    <li class="Adventure" routerLink="type/adventure">Adventure</li>
   </ul>
 </header>
 
